--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,11 @@
+cffi==1.15.1
+cryptography==41.0.3
+lxml==4.9.3
 mysql-connector-python==8.1.0
 opcua==0.98.13
+protobuf==4.21.12
+pycparser==2.21
+python-dateutil==2.8.2
 python-dotenv==1.0.0
+pytz==2023.3.post1
+six==1.16.0
